--- a/src/Sidebar/Sidebar.css
+++ b/src/Sidebar/Sidebar.css
@@ -1,21 +1,3 @@
-.list:hover {
-  background-color: #e0e0e0;
-}
-
-.list.active {
-  background-color: #e0e0e0;
-}
-
-.list {
-  transition: .2s;
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.list h3 {
-  cursor:default;
-}
-
 .lists-wrapper {
   min-width: 150px;
   /* reserve width */
@@ -28,6 +10,37 @@
   overflow-y: auto;
 }
 
+h3 {
+  margin: 8px 0;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+
+}
+
+.list {
+  transition: .2s;
+  display: flex;
+  align-items: center;
+  flex-wrap: nowrap;
+  position: relative;
+}
+
+.list:hover {
+  background-color: #e0e0e0;
+}
+
+.list.active {
+  background-color: #e0e0e0;
+}
+
+
+.list h3 {
+  cursor:default;
+}
+
+
+
 .list-actions {
   display: flex;
   flex-direction: column;
@@ -39,10 +52,7 @@
   border: none;
   font-size: 16px;
   cursor: pointer;
-  align-self: center;
   position: relative;
-  top: 8px;
-
   margin-left: auto;
 
   border-radius: 20px;
@@ -59,15 +69,13 @@
 
 .del {
   border: solid lightgrey 1px;
-  padding: 0;
-  height: 20px;
-  width: 35px;
+  padding: 3px;
   font-size: 10px;
-  position:relative;
   visibility: hidden;
-  top: 3px;
-  right: 12px;
+  position: absolute;
   cursor: pointer;
+  right: 17px;
+  bottom: -3px;
 }
 
 .del:hover {
@@ -77,4 +85,31 @@
 .del.show {
   visibility: visible;
   opacity: 1;
+}
+
+@media (max-width: 768px) {
+  /* mobile styles */
+  .lists-wrapper {
+    min-width: 90px;
+    max-width: 90px;
+  }
+  
+
+  h3 {
+    margin: 3px 0;
+    font-size: 8px;
+  }
+
+  .options {
+    top: -2px;
+    font-size: 10px;
+  }
+  
+  
+  .del {
+    font-size: 3px;
+    padding: 1px;
+    bottom: 3px;
+    right: 14px;
+  }
 }
