--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;            /* remove default margin */
   padding: 0;
   font-family: 'Inter', sans-serif;
+  max-width: 100%;
 }
 
 
